--- a/web/sites/all/themes/devspace/sass/partials/_footer.scss
+++ b/web/sites/all/themes/devspace/sass/partials/_footer.scss
@@ -1,3 +1,7 @@
+#footer-wrap {
+  clear: both;
+}
+
 .wrapper {
   min-height: 100%;
   height: auto !important;
@@ -6,12 +10,13 @@
 }
 
 .push {
-  height:8em;
+  height:10em;
 }
 
 footer.footer {
-  height: 8em;
+  height: 10em;
   margin-top:0;
+  padding-top: 2em;
   background-color:$palette-navbar-dark;
   color:$palette-white;
 
