--- a/web/sites/all/themes/devspace/sass/partials/_navbar.scss
+++ b/web/sites/all/themes/devspace/sass/partials/_navbar.scss
@@ -184,6 +184,7 @@
 header#navbar {
   background: #fff;
   height:auto;
+  padding:0;
 }
 
 .nav-search {
